complete header and navbar

--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script
+      src="https://kit.fontawesome.com/d994538cc1.js"
+      crossorigin="anonymous"
+    ></script>
+     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>tailwind</title>
 </head>
 <body>
-    
+    <nav class="bg-[#301900]">
+        <ul class="flex  p-4 text-white">
+            <li><a href="#" class="hover:text-gray-400 flex ml-40"><img src="./img/paid_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24 1.png" alt="" class="mr-2">AUS ÖSTERREICH</a></li>
+            <li><a href="#" class="hover:text-gray-400 flex"><img src="/img/paid_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24 2.png " alt="" class="mr-2 ml-20">BIS ZU 60% GÜNSTIGER</a></li>
+            <li><a href="#" class="hover:text-gray-400 flex"><img src="/img/contract_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24 1.png" alt="" class="mr-2 ml-20">JEDERZEIT KÜNDBAR</a></li>
+            <li><a href="#" class="hover:text-gray-400 flex"><img src="/img/groups_2_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24 1.png" alt="" class="mr-2 ml-20">40.000+ KUNDEN</a></li>
+    </nav>
+    <div class="bg-[#FAF4EB] flex p-4 text-white flex ">
+        <img src="/img/image 522.png" alt="" class="ml-10 mr-10">
+        <div class="flex text-black mt-5">
+            <a href="#" class="hover:text-gray-400 mr-20">FUNKTIONEN</a>
+            <a href="#" class="hover:text-gray-400 mr-20">PREISE</a>
+            <a href="#" class="hover:text-gray-400 mr-20">REVIEWS</a>
+            <a href="#" class="hover:text-gray-400 mr-20">VERGLEICH</a>
+            <a href="#" class="hover:text-gray-400 mr-20">FAQ</a>
+            <button class=" mb-5 px-6 py-2 border-2 border-yellow-500 text-yellow-600 rounded-full hover:bg-gray-100">
+  Beratung Vereinbaren<i class="fa-solid fa-arrow-right"></i></button>
+    </div>
+    </div>
+    <hr class="border-yellow-500">
 </body>
-</html>
+</html> 
