complete form section

--- a/index.html
+++ b/index.html
@@ -8,28 +8,128 @@
       crossorigin="anonymous"
     ></script>
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>tailwind</title>
+    <title>Hostprofis LP 4P (DE)</title>
 </head>
 <body>
     <nav class="bg-[#301900]">
         <ul class="flex  p-4 text-white">
-            <li><a href="#" class="hover:text-gray-400 flex ml-40"><img src="./img/paid_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24 1.png" alt="" class="mr-2">AUS ÖSTERREICH</a></li>
-            <li><a href="#" class="hover:text-gray-400 flex"><img src="/img/paid_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24 2.png " alt="" class="mr-2 ml-20">BIS ZU 60% GÜNSTIGER</a></li>
-            <li><a href="#" class="hover:text-gray-400 flex"><img src="/img/contract_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24 1.png" alt="" class="mr-2 ml-20">JEDERZEIT KÜNDBAR</a></li>
-            <li><a href="#" class="hover:text-gray-400 flex"><img src="/img/groups_2_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24 1.png" alt="" class="mr-2 ml-20">40.000+ KUNDEN</a></li>
+            <li><a href="#" class="hover:text-gray-400 flex ml-40"><img src="/img/red-white-circle.png" alt="" class="mr-2">AUS ÖSTERREICH</a></li>
+            <li><a href="#" class="hover:text-gray-400 flex"><img src="/img/coin-img.png " alt="" class="mr-2 ml-20">BIS ZU 60% GÜNSTIGER</a></li>
+            <li><a href="#" class="hover:text-gray-400 flex"><img src="/img/file-img.png" alt="" class="mr-2 ml-20">JEDERZEIT KÜNDBAR</a></li>
+            <li><a href="#" class="hover:text-gray-400 flex"><img src="/img/user-img.png" alt="" class="mr-2 ml-20">40.000+ KUNDEN</a></li>
     </nav>
     <div class="bg-[#FAF4EB] flex p-4 text-white flex ">
-        <img src="/img/image 522.png" alt="" class="ml-10 mr-10">
+        <img src="/img/logo.png" alt="" class="ml-10 mr-10">
         <div class="flex text-black mt-5">
             <a href="#" class="hover:text-gray-400 mr-20">FUNKTIONEN</a>
             <a href="#" class="hover:text-gray-400 mr-20">PREISE</a>
             <a href="#" class="hover:text-gray-400 mr-20">REVIEWS</a>
             <a href="#" class="hover:text-gray-400 mr-20">VERGLEICH</a>
             <a href="#" class="hover:text-gray-400 mr-20">FAQ</a>
-            <button class=" mb-5 px-6 py-2 border-2 border-yellow-500 text-yellow-600 rounded-full hover:bg-gray-100">
-  Beratung Vereinbaren<i class="fa-solid fa-arrow-right"></i></button>
+            <button class="p-2 mb-5 border-2 border-yellow-500 text-yellow-600 rounded-full hover:bg-gray-100">
+             Beratung Vereinbaren<i class="fa-solid fa-arrow-right"></i></button>
     </div>
     </div>
     <hr class="border-yellow-500">
+    <div class="flex pb-50">
+        <div class="mt-20 ml-10 mr-40 ">
+            <div class="flex">
+            <img src="/img/star.png" alt="">
+            <img src="/img/star.png" alt="">
+            <img src="/img/star.png" alt="">
+            <img src="/img/star.png" alt="">
+            <img src="/img/star.png" alt="" class="mr-4">
+            <p>Die #1 bei 40.000+ Unternehmen</p>
+        </div>
+            <h1 class=" font-bold text-5xl w-150 ">
+                Sie sind von der ISDN Abschaltung betroffen?
+            </h1>
+            <p class="mt-5 w-120">
+                Wechseln Sie in nur 14 Tagen zu moderner Cloud-Telefonie - ohne hohe Kosten, ohne Stress und ohne Unterbrechungen.
+            </p>
+            <p class="mt-5 flex mb-2"><img src="/img/check-mark.png" alt=""> Ihre Telefonnummern <strong>bleiben erhalten</strong></p>
+            <p class="flex mb-2"><img src="/img/check-mark.png" alt="">Keine <strong>teuren Anschaffungskosten</strong></p>
+            <p class="flex mb-2"><img src="/img/check-mark.png" alt="">Betreuung durch unser <strong>österreichisches Team</strong></p>
+            <div class="border border-yellow-500 rounded-lg p-4 mt-5">
+                <p class="w-120">"Unsere ISDN-Leitung wurde mit nur 6 Wochen Frist gekündigt. Hostprofis hat unser neues System in nur 14 Tagen eingerichtet und wir konnten alle Nummern behalten. Keine Ausfallzeit, kein Stress." </p>
+                <div class="mt-5 flex">
+                    <img src="/img/gregor-zeisl.png" alt="">
+                    <div class="ml-3">
+                        <p class="font-bold">Gregor Zeisl</p>  
+                        <div class="flex">                      
+                        <img src="/img/star.png" alt="">
+                        <img src="/img/star.png" alt="">
+                        <img src="/img/star.png" alt="">
+                        <img src="/img/star.png" alt="">
+                        <img src="/img/star.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-[#FAF7EB] border-2 border-yellow-500 rounded-lg p-4 mr-100 mt-10">
+            <h1 class="font-bold text-2xl text-center pt-3">Jetzt 100% kostenlos und unverbindlich beraten lassen!</h1>
+            <form class="mt-4 p-5 ">
+                <div class="flex ">
+                <div>
+                    <p class="text-[#344054]">
+                    Vor- und Nachname
+                    </p>
+                <input type="text" class="border-2 border-gray-300 rounded-full p-2 mb-4 mr-3" placeholder="Max Mustermann">
+                </div>
+                <div>
+                    <p class="text-[#344054]">
+                    Firmenname
+                    </p>
+                <input type="text" class="border-2 border-gray-300 rounded-full p-2 mb-4" placeholder="Max Mustermann">
+                </div>
+                </div>
+                <div class="flex ">
+                <div>
+                    <p class="text-[#344054]">
+                    Email
+                    </p>
+                <input type="email" class="border-2 border-gray-300 rounded-full p-2 mb-4 mr-3" placeholder="max@mustermann.at">
+                </div>
+                <div>
+                    <p class="text-[#344054]">
+                     Telefonnummer
+                    </p>
+                <input type="number" class="border-2 border-gray-300 rounded-full p-2 mb-4" placeholder="+43 123456789">
+                </div>
+                </div>
+                <div>
+                    <p>
+                        Wie viele Mitarbeiter hat Ihr Unternehmen?
+                    </p>
+                    <input type="tel" class="border-2 border-gray-300 rounded-full p-2 mb-4 w-full" placeholder="Anzahl der Mitarbeiter">
+                </div>
+                <div>
+                    <button class="w-full bg-yellow-500 rounded-full p-3 text-white font-bold hover:bg-yellow-200">Jetzt Kostenlos Beraten Lassen</button>
+                    <a href="#"> <i class="fa-solid fa-lock ml-15 mr-2"></i>Ihre Daten sind sicher – Keine Werbung!</a>
+                </div>
+                <div class="flex ml-3 mt-5">
+                    <img src="/img/top-50.png" alt="" class="mr-1">
+                    <img src="/img/pcpro-a-list.png" alt="" class="mr-1">
+                    <img src="/img/leade-enterpriser.png" alt="" class="mr-1">
+                    <img src="/img/capterra.png" alt="" class="mr-1">
+                    <img src="/img/pcpro.png" alt="" class="mr-3">
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="bg-[#FAF7EB] p-10">
+        <strong class="ml-125">Die #1 bei 40.000+ Unternehmen</strong>
+        <div class="flex mt-5 ml-10">
+            <img src="/img/fujitsu.png" alt="" >
+            <img src="/img/berndorf.png" alt="">
+            <img src="/img/aelmam.png" alt="">
+            <img src="/img/grhoe.png" alt="">
+            <img src="/img/hectas.png" alt="">
+            <img src="img/lindt.png" alt="">
+            <img src="/img/dachser.png" alt="">
+            <img src="/img/universitat-salzburg.png" alt="">
+            <img src="/img/panalpina.png" alt="">
+        </div>
+    </div>
 </body>
 </html> 
