--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
             <a href="#" class="hover:text-gray-400 mr-20">VERGLEICH</a>
             <a href="#" class="hover:text-gray-400 mr-20">FAQ</a>
             <button class="p-2 mb-5 border-2 border-yellow-500 text-yellow-600 rounded-full hover:bg-gray-100">
-             Beratung Vereinbaren<i class="fa-solid fa-arrow-right"></i></button>
+             Beratung Vereinbaren<i class="fa-solid fa-arrow-right ml-2"></i></button>
     </div>
     </div>
     <hr class="border-yellow-500">
-    <div class="flex pb-50">
+    <div class="flex pb-50 mt-10">
         <div class="mt-20 ml-10 mr-40 ">
             <div class="flex">
             <img src="/img/star.png" alt="">
@@ -39,7 +39,7 @@
             <img src="/img/star.png" alt="">
             <img src="/img/star.png" alt="">
             <img src="/img/star.png" alt="" class="mr-4">
-            <p>Die #1 bei 40.000+ Unternehmen</p>
+            <p>Die <strong>#1</strong> bei <strong>40.000+ Unternehmen</strong></p>
         </div>
             <h1 class=" font-bold text-5xl w-150 ">
                 Sie sind von der ISDN Abschaltung betroffen?
@@ -47,9 +47,9 @@
             <p class="mt-5 w-120">
                 Wechseln Sie in nur 14 Tagen zu moderner Cloud-Telefonie - ohne hohe Kosten, ohne Stress und ohne Unterbrechungen.
             </p>
-            <p class="mt-5 flex mb-2"><img src="/img/check-mark.png" alt=""> Ihre Telefonnummern <strong>bleiben erhalten</strong></p>
-            <p class="flex mb-2"><img src="/img/check-mark.png" alt="">Keine <strong>teuren Anschaffungskosten</strong></p>
-            <p class="flex mb-2"><img src="/img/check-mark.png" alt="">Betreuung durch unser <strong>österreichisches Team</strong></p>
+            <p class="mt-5 flex mb-2"><img src="/img/check-mark.png" alt="" class="mr-4"> Ihre Telefonnummern <strong>bleiben erhalten</strong></p>
+            <p class="flex mb-2"><img src="/img/check-mark.png" alt="" class="mr-4">Keine <strong>teuren Anschaffungskosten</strong></p>
+            <p class="flex mb-2"><img src="/img/check-mark.png" alt="" class="mr-4">Betreuung durch unser <strong>österreichisches Team</strong></p>
             <div class="border border-yellow-500 rounded-lg p-4 mt-5">
                 <p class="w-120">"Unsere ISDN-Leitung wurde mit nur 6 Wochen Frist gekündigt. Hostprofis hat unser neues System in nur 14 Tagen eingerichtet und wir konnten alle Nummern behalten. Keine Ausfallzeit, kein Stress." </p>
                 <div class="mt-5 flex">
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>
-        <div class="bg-[#FAF7EB] border-2 border-yellow-500 rounded-lg p-4 mr-100 mt-10">
+        <div class="bg-[#FAF7EB] border-2 border-yellow-500  p-4 mr-100 mt-10">
             <h1 class="font-bold text-2xl text-center pt-3">Jetzt 100% kostenlos und unverbindlich beraten lassen!</h1>
             <form class="mt-4 p-5 ">
                 <div class="flex ">
@@ -131,5 +131,53 @@
             <img src="/img/panalpina.png" alt="">
         </div>
     </div>
+    <div class="pb-30 ">
+        <h1 class="text-center font-bold text-4xl mt-10 mb-5">
+            Ihre komplette Cloud Telefonanlage schon ab €14,90 pro Nutzer
+        </h1>
+        <p class="w-200 text-center mx-auto mb-10">
+            Sie erhalten alle <strong>Premium-Funktionen einer Enterprise-Telefonanlage,</strong> kombiniert mit <strong>maximaler Benutzerfreundlichkeit</strong> und das zu einem <strong>Bruchteil der Kosten.</strong> Wir kümmern uns um den perfekten Start und den reibungslosen Betrieb – Sie genießen modernste Kommunikationstechnik ohne komplizierte Installation.
+        </p>
+    </div>
+    <div class="flex">
+        <div class="border-2 border-yellow-500 rounded-lg ml-20">
+            <img src="/img/group-img.png" alt="">
+        </div>
+        <div>
+            <h1 class="text-3xl font-bold mt-10 ml-5 w-120 mb-10">
+                Keine IT-Kopfschmerzen beim Wechsel in die Cloud
+            </h1>
+            <p class="ml-5 w-110 mb-10">
+                Wir übernehmen den gesamten Umstieg von der alten Telefonanlage in die Cloud für <strong>Sie. Schnell, einfach und kostenlos.</strong>
+            </p>
+            <div>
+                <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-120">
+                  Ihr System ist in nur <strong>14 Tagen einsatzbereit</strong> – professionell eingerichtet und perfekt konfiguriert. 
+                </p>
+                </div>
+                    <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                    Sie bleiben während dem Umstieg für Ihre Kunden <strong>100% ohne Unterbrechung erreichbar.</strong> 
+                 </p>
+                </div>
+                    <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                  Wir kümmern uns um die komplette Nummernübertragung, damit <strong>Ihre alten Nummern nahtlos weiter funktionieren. </strong>
+                </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr class="mt-50 pb-10 border-gray-100 w-300 ml-20">
 </body>
 </html> 
