cpmplete img and text section

--- a/index.html
+++ b/index.html
@@ -178,6 +178,184 @@
             </div>
         </div>
     </div>
-    <hr class="mt-50 pb-10 border-gray-100 w-300 ml-20">
+    <hr class="mt-30 pb-30 border-gray-100 w-300 ml-20">
+      <div class="flex">
+        <div class="ml-20">
+            <h1 class="text-3xl font-bold mt-10 ml-5 w-120 mb-10">
+              Persönlicher und regionaler Support aus Österreich
+            </h1>
+            <p class="ml-5 w-110 mb-10">
+                Wir sind ein österreichisches Unternehmen mit Standorten in allen Bundesländern. Sie erreichen uns jederzeit – und bei dringenden Fällen sind wir blitzschnell vor Ort!
+            </p>
+            <div>
+                <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                  <strong>Ihr persönlicher, lokaler Experte kennt Ihre Bedürfnisse –</strong> kein lästiges Weiterleiten an dutzende Ansprechpartner.
+                </p>
+                </div>
+                    <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                  Unser <strong>Expertenteam</strong> gewährleistet einen <strong>reibungslosen Betrieb,</strong> ohne Aufwand für Ihr Unternehmen.                    
+                </p>
+                </div>
+                    <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                  Verlassen Sie sich auf <strong> erstklassigen Support aus Österreich</strong> mit persönlicher Betreuung vor Ort.
+                </p>
+                </div>
+            </div>
+        </div>
+                <div class="ml-10">
+            <img src="/img/laptop-img .png" alt="">
+        </div>
+    </div>
+    <hr class="mt-30 pb-30 border-gray-100 w-300 ml-20">
+        <div class="flex">
+        <div class="border-2 border-yellow-500 rounded-lg ml-20 mr-15 bg-[#FAF7EB]">
+            <img src="/img/group-class.png" alt="">
+        </div>
+        <div>
+            <h1 class="text-3xl font-bold mt-10 ml-5 w-130 mb-10">
+                Über 150 Premium Funktionen für Ihre Business-Telefonie
+             </h1>
+            <p class="ml-5 w-105 mb-10">
+                Mit unserer Cloud-Telefonanlage erhalten Sie alle Funktionen einer Enterprise-Telefonanlage – nur einfacher zu bedienen und zu einem Bruchteil der Kosten.
+            </p>
+            <div>
+                <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                  Eine smarte <strong>digitale Rezeption</strong> leitet Ihre Anrufer sofort zum richtigen Ansprechpartner weiter. 
+                </p>
+                </div>
+                    <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                    Unser <strong>intelligentes Warteschleifensystem</strong> mit <strong> Rückrufoptionen</strong> sorgt für <strong>zufriedene Kunden.</strong>
+                </p>
+                </div>
+                    <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                  Nahtlose Anrufweiterleitung auf mobile Geräte, Call Recording, Konferenzschaltungen,<strong>und vieles mehr.</strong>
+                </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr class="mt-30 pb-30 border-gray-100 w-300 ml-20">
+    <div class="flex">
+        <div class="ml-20">
+            <h1 class="text-3xl font-bold mt-10 ml-5 w-120 mb-10">
+                Professionelle Geschäftsanrufe von jedem Gerät aus tätigen
+            </h1>
+            <p class="ml-5 w-110 mb-10">
+                Bleiben Sie überall erreichbar – ob im Büro, unterwegs oder im Home-Office:
+            </p>
+            <div>
+                <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                  Nutzen Sie Ihre geschäftliche Rufnummer auf allen Geräten: <strong>Tischtelefon, Smartphone oder Computer.</strong>
+                </p>
+                </div>
+                    <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                    Wechseln Sie nahtlos zwischen <strong> verschiedenen Arbeitsorten.</strong> Ihre Erreichbarkeit bleibt konstant.
+                </p>
+                </div>
+                    <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                  Ermöglichen Sie Ihrem Team <strong>maximale Bewegungsfreiheit</strong> bei gleichbleibend <strong>professionellem Auftreten.</strong>
+                </p>
+                </div>
+            </div>
+        </div>
+                <div class="ml-10 border-2 border-yellow-500 rounded-lg bg-[#FAF4EB]" >
+            <img src="/img/image 506.png" alt="">
+        </div>
+    </div>
+        <hr class="mt-30 pb-30 border-gray-100 w-300 ml-20">
+                <div class="flex mb-50">
+        <div class="border-2 border-yellow-500 rounded-lg ml-20 mr-15 bg-[#FAF7EB]">
+            <img src="" alt="">
+        </div>
+        <div>
+            <h1 class="text-3xl font-bold mt-10 ml-5 w-130 mb-10">
+                Nahtlose Integration mit Ihren bestehenden Systemen
+             </h1>
+            <p class="ml-5 w-105 mb-10">
+                Vernetzen Sie Ihre Kommunikation auf Knopfdruck mit all Ihren Tools und Geschäftsprozessen:
+            </p>
+            <div>
+                <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                  Steigern Sie Ihre Servicequalität durch <strong>sofortigen Zugriff auf Kundeninformationen bei eingehenden Anrufen.</strong>
+                </p>
+                </div>
+                    <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                    Dokumentieren Sie jede Kundeninteraktion <strong>automatisch</strong> in Ihrem CRM-System.
+                </p>
+                </div>
+                    <div class="flex m-4">
+                <div>
+                    <img src="/img/check-mark.png" alt="" class="mr-4">
+                </div>
+                <p class="w-110">
+                  Optimieren Sie Ihre Workflows durch direkte <strong> Verknüpfung von Telefonaten mit digitalen Kundenakten.</strong>
+                </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bg-[#FAF7EB]">
+        <hr class="border-1 border-yellow-500">
+        <h1 class="text-3xl font-bold mt-10 ml-90 mt-30 mb-10">60% weniger Kosten bei 100x mehr Leistung</h1>
+
+        <div class="flex ml-60">
+            <img src="/img/check-mark.png" alt="" class="mr-3 ml-10">
+            <p>Genießen Sie volle Planungssicherheit durch eine <strong>All-inclusive-Pauschale</strong> ohne Überraschungen.</p>
+        </div>
+
+
+            <div class="flex ml-60">
+                <img src="/img/check-mark.png" alt="" class="mr-3 ml-10">
+                <p>Bis zu <strong>60% Kostenersparnis</strong> gegenüber konventionellen Telefonanlagen – bei deutlich mehr Funktionsumfang.</p>
+            </div>
+
+            <div class="flex ml-60">
+                <img src="/img/check-mark.png" alt="" class="mr-3 ml-10 pb-20">
+                <p><strong>Reduzieren Sie Ihre Mobilfunkkosten</strong> durch intelligente Cloud Telefonie auf allen Geräten.</p>
+
 </body>
 </html> 
