make two card section

--- a/index.html
+++ b/index.html
@@ -47,11 +47,24 @@
             <p class="mt-5 w-120">
                 Wechseln Sie in nur 14 Tagen zu moderner Cloud-Telefonie - ohne hohe Kosten, ohne Stress und ohne Unterbrechungen.
             </p>
-            <p class="mt-5 flex mb-2"><img src="/img/check-mark.png" alt="" class="mr-4"> Ihre Telefonnummern <strong>bleiben erhalten</strong></p>
-            <p class="flex mb-2"><img src="/img/check-mark.png" alt="" class="mr-4">Keine <strong>teuren Anschaffungskosten</strong></p>
-            <p class="flex mb-2"><img src="/img/check-mark.png" alt="" class="mr-4">Betreuung durch unser <strong>österreichisches Team</strong></p>
+            <p class="mt-5 flex mb-2">
+                <img src="/img/check-mark.png" alt="" class="mr-4"> 
+                Ihre Telefonnummern      
+                <strong>bleiben erhalten</strong>
+            </p>
+            <p class="flex mb-2">
+                <img src="/img/check-mark.png" alt="" class="mr-4">
+                Keine 
+                <strong>teuren Anschaffungskosten</strong>
+            </p>
+            <p class="flex mb-2">
+                <img src="/img/check-mark.png" alt="" class="mr-4">
+                Betreuung durch unser
+                <strong>österreichisches Team</strong>
+            </p>
             <div class="border border-yellow-500 rounded-lg p-4 mt-5">
-                <p class="w-120">"Unsere ISDN-Leitung wurde mit nur 6 Wochen Frist gekündigt. Hostprofis hat unser neues System in nur 14 Tagen eingerichtet und wir konnten alle Nummern behalten. Keine Ausfallzeit, kein Stress." </p>
+                <p class="w-120">
+                    "Unsere ISDN-Leitung wurde mit nur 6 Wochen Frist gekündigt. Hostprofis hat unser neues System in nur 14 Tagen eingerichtet und wir konnten alle Nummern behalten. Keine Ausfallzeit, kein Stress." </p>
                 <div class="mt-5 flex">
                     <img src="/img/gregor-zeisl.png" alt="">
                     <div class="ml-3">
@@ -66,7 +79,7 @@
                 </div>
             </div>
         </div>
-        <div class="bg-[#FAF7EB] border-2 border-yellow-500  p-4 mr-100 mt-10">
+        <div class="bg-[#FAF7EB] border-2 border-yellow-500 rounded-lg p-4 mr-100 mt-10">
             <h1 class="font-bold text-2xl text-center pt-3">Jetzt 100% kostenlos und unverbindlich beraten lassen!</h1>
             <form class="mt-4 p-5 ">
                 <div class="flex ">
@@ -346,8 +359,6 @@
             <img src="/img/check-mark.png" alt="" class="mr-3 ml-10">
             <p>Genießen Sie volle Planungssicherheit durch eine <strong>All-inclusive-Pauschale</strong> ohne Überraschungen.</p>
         </div>
-
-
             <div class="flex ml-60">
                 <img src="/img/check-mark.png" alt="" class="mr-3 ml-10">
                 <p>Bis zu <strong>60% Kostenersparnis</strong> gegenüber konventionellen Telefonanlagen – bei deutlich mehr Funktionsumfang.</p>
@@ -356,6 +367,152 @@
             <div class="flex ml-60">
                 <img src="/img/check-mark.png" alt="" class="mr-3 ml-10 pb-20">
                 <p><strong>Reduzieren Sie Ihre Mobilfunkkosten</strong> durch intelligente Cloud Telefonie auf allen Geräten.</p>
+                </div>
+                <div class="flex pb-20">
+                <div>
+                    <div class="mt-30 border-2 border-yellow-500 rounded-lg bg-white ml-20 mr-10">
+                            <div class="flex pt-10 ml-15">
+                                <img src="/img/cloud-tag.png" alt="">
+                                 <h2 class="text-4xl font-bold text-yellow-600 ml-5 mt-2">
+                                 Cloud Telefonie Pakete</h2>
+                            </div>
+                            <div class="flex mt-5 pr-10 mb-10">
+                            <div class="ml-10">
+                          <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Behalten Sie Ihre Nummern</p>
+                       </div>
 
+                        <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Nutzbar auf jedem Gerät</p>
+                       </div>
+
+                        <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">150+ Funktionen inklusive</p>
+                       </div>
+                     </div>
+
+                            <div class="ml-10">
+                          <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Kostenlose Einrichtung</p>
+                       </div>
+
+                        <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Hosting in Österreich</p>
+                       </div>
+
+                        <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Jederzeit kündbar</p>
+                       </div>
+                     </div>
+                    </div>
+                    <hr class="m-10 border-yellow-500">
+                    <div>
+                        <div class="flex ml-10">
+                            <p class="mr-60">Schon ab</p>
+                            <p>Schon ab</p>
+                        </div>
+                        <div class="flex">
+                        <div class="flex ml-10 mt-2">
+                            <h2 class="font-bold text-4xl text-yellow-700">€14,90</h2>
+                            <p class="mt-3 font-bold ml-2">/ Monat</p>
+                        </div>
+                        <div class="flex ml-10 mt-2">
+                            <h2 class="font-bold text-4xl text-yellow-700 ml-20">€58,90</h2>
+                            <p class="mt-3 font-bold ml-2">/ Monat</p>
+                        </div> 
+                        </div>
+                            <div class="flex ml-10 pb-5">
+                            <p class="mr-57">pro Nutzer</p>
+                            <p>für unbegrenzte Nutzer</p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                     <div>
+                    <div class="mt-30 border-2 border-yellow-500 rounded-lg bg-white  ">
+                            <div class="flex pt-10 ml-15">
+                                <img src="/img/sell-tag.png" alt="">
+                                 <h2 class="text-4xl font-bold text-yellow-600 ml-5">
+                                 Telefon Tarife</h2>
+                            </div>
+                            <div class="flex mt-5 pr-10 mb-10">
+                            <div class="ml-10 ">
+                          <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Festnetz & Mobil in AT</p>
+                       </div>
+
+                        <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Festnetz & Mobil in EU</p>
+                       </div>
+
+                        <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Unbegrenzte Nutzer</p>
+                       </div>
+                     </div>
+
+                            <div class="ml-10">
+                          <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Einfache Anrufverwaltung</p>
+                       </div>
+
+                        <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Transparente Preise</p>
+                       </div>
+
+                        <div class="flex mt-2">
+                        <img src="/img/check-mark.png" alt="">
+                        <p class="font-bold ml-3">Jederzeit kündbar</p>
+                       </div>
+                     </div>
+                        </div>
+                        <hr class="m-10 border-yellow-500">
+                    <div>
+                        <div class="flex ml-10">
+                            <p class="mr-57">Schon ab</p>
+                            <p>Schon ab</p>
+                        </div>
+                        <div class="flex">
+                        <div class="flex ml-10 mt-2">
+                            <h2 class="font-bold text-4xl text-yellow-700">4,9 Cent</h2>
+                            <p class="mt-3 font-bold ml-2">/ Minute</p>
+                        </div>
+                        <div class="flex ml-10 mt-2">
+                            <h2 class="font-bold text-4xl text-yellow-700 ml-10">€14,90</h2>
+                            <p class="mt-3 font-bold ml-2">/ Monat</p>
+                        </div> 
+                        </div>
+                            <div class="flex ml-10 pb-5">
+                            <p class="mr-30">bei Freiminuten-Paketen</p>
+                            <p>für unbegrentzte Minuten</p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                </div>
+                <div>
+                    <button class="ml-120 w-100 bg-yellow-500 rounded-full p-3 text-white font-bold hover:bg-yellow-200">Jetzt Kostenlos Beraten Lassen</button>
+                </div>
+                <div class="flex ml-130 mt-2 pb-10">
+                    <img src="/img/star.png" alt="">
+                    <img src="/img/star.png" alt="">
+                    <img src="/img/star.png" alt="">
+                    <img src="/img/star.png" alt="">
+                    <img src="/img/star.png" alt="">
+                    <div>
+                        <p>Über <strong>40.000</strong> zufriedene Kunden</p>
+                    </div>
+                </div>
+    </div>
 </body>
 </html> 
